--- a/app/assets/stylesheets/application/global_modifiers.css
+++ b/app/assets/stylesheets/application/global_modifiers.css
@@ -1,3 +1,10 @@
 .--scrollable {
   overflow: auto;
 }
+
+.--sticky {
+  position: sticky;
+  top: 0;
+  background-color: var(--black);
+  z-index: 1;
+}
