--- a/app/assets/stylesheets/layout/requests.css
+++ b/app/assets/stylesheets/layout/requests.css
@@ -9,8 +9,8 @@
         'bycontroller bycontroller'
         'events events';
     grid-template-columns: 1fr 1fr;
-    grid-template-rows: 265px auto auto;
-    gap: 1rem;
+    grid-template-rows: min-content min-content auto auto;
+    gap: 2rem;
 
     & > .layout-requests_index-glance {
       grid-area: glance;
@@ -18,6 +18,9 @@
 
     & > .layout-requests_index-chart {
       grid-area: chart;
+      display: grid;
+      grid-template-columns: subgrid;
+      padding-inline: 2rem;
     }
 
     & > .layout-requests_index-by_controller {
