--- a/app/views/rails_observatory/mailers/index.html.erb
+++ b/app/views/rails_observatory/mailers/index.html.erb
@@ -1,47 +1,12 @@
 <% content_for(:title, 'Mailers') %>
 
-<div class="tabs">
-  <nav class="tabs-nav">
-    <label class="tabs-button">
-      Sent Mail
-      <input type="radio" name="tabs" checked>
-    </label>
-    <label class="tabs-button">
-      Received Mail
-      <input type="radio" name="tabs">
-    </label>
-  </nav>
-</div>
 <%= render 'chart', type: 'bar', series: series_for(name: 'mailer.count', aggregate_using: :sum) %>
+<section>
+  <h2>Email Delivered</h2>
 
-<!--<div class="card">-->
-<!--  <h2>By Mailer Action</h2>-->
-<!--  <table>-->
-<!--    <thead>-->
-<!--    <tr>-->
-<!--      <th>Mailer Action</th>-->
-<!--      <th>Executions</th>-->
-<!--      <th>Errors</th>-->
-<!--    </tr>-->
-<!--    </thead>-->
-<!--    <tbody>-->
-    <%# @by_mailer_action.each do |series| %>
-<!--      <tr>-->
-<!--        <td><%#= series.mailer_action.classify %></td>-->
-<!--        <td><%#= series.value %></td>-->
-<!--        <td></td>-->
-<!--      </tr>-->
-    <%# end %>
-
-<!--    </tbody>-->
-<!--  </table>-->
-<!--</div>-->
-
-<div class="card">
-  <h2>Recent Mail</h2>
-  <%# render 'events_table', events: @events, fields: [
-    :timestamp, :request_id, :message_id, :mailer, :action, :subject, :duration, :to, :from, :date, :db_runtime, :name
-  ], formatters: {
-    message_id: ->(message_id, e) { link_to message_id, mailer_path(e.id) },
-  } %>
-</div>
+  <%= render 'events_table', events: @deliveries, fields: [
+    :time, :to, :from, :subject], formatters: {
+    time: ->(time, event) { link_to Time.at(time).to_fs('%H:%M:%S'), '' },
+  }
+  %>
+</section>
