--- a/app/views/rails_observatory/errors/show.html.erb
+++ b/app/views/rails_observatory/errors/show.html.erb
@@ -5,7 +5,7 @@
   </span>
 <% end %>
 <% content_for(:hide_duration, 'true') %>
-<% content_for(:main_css_class, 'layout/errors-show') %>
+<% content_for(:main_css_class, 'layout-two-column') %>
 
 <style>
 
@@ -28,7 +28,7 @@
   }
 
   .highlight {
-    background-color: var(--surface-card);
+    /*background-color: var(--surface-card);*/
     width: 100%;
     overflow: auto;
 
@@ -41,7 +41,7 @@
       padding-inline: .25rem;
       position: sticky;
       left: 0;
-      background-color: var(--surface-card);
+      background-color: #161b22;
 
       .hll & {
         background-color: #49483e;
@@ -125,12 +125,12 @@
   }
 </style>
 
-<div class="errors/show/side-panel">
+<div class="layout-two-column-side-panel side-panel">
   <dl>
     <dt>Occurrences</dt>
-    <dd class="_occurrence_count"><%= @error.count %></dd>
+    <dd class="_occurrence_count"><%= @count %></dd>
     <dt>Last Seen</dt>
-    <dd title="<%= @error.last_seen %>"><%= time_ago_in_words(@error.last_seen) %> ago</dd>
+    <dd title="<%= @error.time %>"><%= time_ago_in_words(@error.time) %> ago</dd>
 
     <dt>Past 24 Hours</dt>
     <dd>
@@ -147,18 +147,20 @@
   </dl>
 </div>
 
-<div class="errors/show/details">
+<div class="layout-two-column-main">
+  <div style="padding: 1rem;padding-top:0;padding-bottom:2rem;">
   <h2><%= @error.message %></h2>
   <% @error.causes.each do |cause| %>
-    <div>caused by:</div>
-    <h2><%= cause[:class_name] %></h2>
-    <%= cause[:message] %>
+    <div style="color: var(--black-secondary);text-transform: uppercase; font-weight: var(--font-weight-bold);">caused by:</div>
+    <h2><%= cause["class_name"] %></h2>
+    <%= cause['message'] %>
   <% end %>
+  </div>
 
   <div class="card">
     <h2>Trace</h2>
-    <% @error.trace.slice_when { _1[:is_application_trace] != _2[:is_application_trace] }.each do |trace_chunk| %>
-      <% if !trace_chunk.first[:is_application_trace] %>
+    <% @error.trace.slice_when { _1["is_application_trace"] != _2["is_application_trace"] }.each do |trace_chunk| %>
+      <% if !trace_chunk.first["is_application_trace"] %>
         <details class="framework-trace-chunk">
           <summary>
             <svg class="arrow-right" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" width="16">
@@ -168,19 +170,20 @@
           </summary>
       <% end %>
       <% trace_chunk.each do |trace_line| %>
-        <details class="backtrace-line <%= '--application-frame' if trace_line[:is_application_trace] %>" <%= 'open' if trace_line[:is_application_trace] %>>
+        <details class="backtrace-line <%= '--application-frame' if trace_line["is_application_trace"] %>" <%= 'open' if trace_line["is_application_trace"] %>>
           <summary>
             <svg class="arrow-right" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" width="16">
               <path stroke-linecap="round" stroke-linejoin="round" d="M8.25 4.5l7.5 7.5-7.5 7.5" />
             </svg>
-            <span class="_path"><%= trace_line[:trace] %></span>
+            <span class="_path"><%= trace_line["trace"] %></span>
           </summary>
           <div class="highlight">
-            <%== highlight_source_extract(@error.source_extracts[trace_line[:id]]) %>
+            <%#= trace_line %>
+            <%== highlight_source_extract(@error.source_extracts[trace_line["id"]]) %>
           </div>
         </details>
       <% end %>
-      <% if !trace_chunk.first[:is_application_trace] %>
+      <% if !trace_chunk.first["is_application_trace"] %>
         </details>
       <% end %>
     <% end %>
