--- a/public/assets/stylesheets/application.css
+++ b/public/assets/stylesheets/application.css
@@ -151,6 +151,23 @@ section {
   }
 }
 
+/* app/assets/stylesheets/layout/two-column.css */
+@layer layout {
+  .layout-two-column {
+    display: grid;
+    grid-template-columns: minmax(0, 1fr) 300px;
+    grid-template-areas: "main side-panel";
+    gap: 2rem;
+    & > .layout-two-column-main {
+      grid-area: main;
+      padding: 1rem;
+    }
+    & > .layout-two-column-side-panel {
+      grid-area: side-panel;
+    }
+  }
+}
+
 /* app/assets/stylesheets/application/global_modifiers.css */
 .--scrollable {
   overflow: auto;
@@ -680,36 +697,6 @@ text-gauge {
 }
 
 /* app/assets/stylesheets/requests/stats.css */
-.requests\/stats {
-  display: flex;
-  border-bottom: 1px solid var(--divider);
-  margin: 0;
-  ._unit {
-    font-size: 1.3rem;
-    font-weight: 400;
-    margin-left: .25rem;
-    color: var(--black-secondary);
-  }
-  & > * {
-    padding: 2rem 2rem;
-    flex-grow: 1;
-    & + & {
-      border-left: 1px solid var(--divider);
-    }
-    & > dt {
-      font-weight: 400;
-      color: var(--black-secondary);
-      margin-bottom: .75rem;
-    }
-    & > dd {
-      font-size: 2.5rem;
-      font-weight: 400;
-      margin: 0;
-      display: flex;
-      align-items: baseline;
-    }
-  }
-}
 .table-bar-chart {
   display: grid;
   grid-template-columns: auto min-content min-content;
