--- a/app/assets/stylesheets/application/table_chart.css
+++ b/app/assets/stylesheets/application/table_chart.css
@@ -30,6 +30,16 @@
       font-weight: 400;
       padding: 0.5rem 1rem;
       border-bottom: 1px solid var(--divider);
+      & + & {
+        border-left: 1px solid var(--divider);
+      }
+      &:first-child {
+        padding-left: 2rem;
+      }
+
+      &:last-child {
+        padding-right: 2rem;
+      }
     }
 
     & tr {
@@ -42,6 +52,14 @@
 
       & + & {
         border-left: 1px solid var(--divider);
+      }
+
+      &:first-child {
+        padding-left: 2rem;
+      }
+
+      &:last-child {
+        padding-right: 2rem;
       }
     }
   }
