--- a/app/views/rails_observatory/mailers/index.html.erb
+++ b/app/views/rails_observatory/mailers/index.html.erb
@@ -1,12 +1,11 @@
 <% content_for(:title, 'Mailers') %>
-
-<%= render 'chart', type: 'bar', series: series_for(name: 'mailer.count', aggregate_using: :sum) %>
 <section>
   <h2>Email Delivered</h2>
 
   <%= render 'events_table', events: @deliveries, fields: [
-    :time, :to, :from, :subject], formatters: {
-    time: ->(time, event) { link_to Time.at(time).to_fs('%H:%M:%S'), '' },
+    :time, :to, :from, :subject, :view], formatters: {
+    time: ->(time, event) { Time.at(time).to_fs('%H:%M:%S') },
+    view: ->(view, event) { link_to 'View', preview_mail_path(event.message_id) }
   }
   %>
 </section>
