--- a/app/assets/stylesheets/application/query_table.css
+++ b/app/assets/stylesheets/application/query_table.css
@@ -13,6 +13,13 @@
     & + & {
       border-left: 1px solid var(--divider);
     }
+
+    &:first-child {
+      padding-left: 2rem;
+    }
+    &:last-child {
+      padding-right: 2rem;
+    }
   }
 
   & > header {
