--- a/app/views/layouts/rails_observatory/application.html.erb
+++ b/app/views/layouts/rails_observatory/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Observatory</title>
+  <title>Rails Observatory</title>
   <%= csrf_meta_tags %>
   <%= csp_meta_tag %>
   <link rel="preload" href="<%= "#{root_path}assets/stylesheets/application.css" %>" as="style">
