--- a/app/views/layouts/rails_observatory/application.html.erb
+++ b/app/views/layouts/rails_observatory/application.html.erb
@@ -6,6 +6,7 @@
   <%= csp_meta_tag %>
   <meta name="turbo-cache-control" content="no-cache">
   <meta name="turbo-root" content="<%= root_path %>">
+  <meta name="turbo-prefetch" content="false">
   <%= action_cable_meta_tag %>
   <%= stylesheet_link_tag "rails_observatory/application", "data-turbo-track": "reload" %>
   <%= javascript_importmap_tags "application", importmap: RailsObservatory.importmap %>
@@ -50,7 +51,7 @@
     <%= redis_mem_info['used_memory_rss_human'] %>
   </div>
 </nav>
-<nav class="top-nav">
+<nav class="top-nav" style="view-transition-name: top-nav">
   <span>
     <h1>
       <span class="_subtitle">
@@ -70,7 +71,8 @@
         <% if relative_time_slice? %>
           <span>Past <%= duration.inspect %></span>
         <% else %>
-          <span><%= duration_label(duration) %> <%= time_start.strftime("%b %-d, %Y %H:%M") %> - <%= time_end.strftime("%b %-d, %Y %H:%M") %></span>
+          <span><%= duration_label(duration) %> <%= time_start.strftime("%b %-d, %Y %H:%M") %>
+            - <%= time_end.strftime("%b %-d, %Y %H:%M") %></span>
         <% end %>
         <svg class="h-5 w-5 text-gray-400" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true" height="20">
           <path fill-rule="evenodd" d="M10 3a.75.75 0 01.55.24l3.25 3.5a.75.75 0 11-1.1 1.02L10 4.852 7.3 7.76a.75.75 0 01-1.1-1.02l3.25-3.5A.75.75 0 0110 3zm-3.76 9.2a.75.75 0 011.06.04l2.7 2.908 2.7-2.908a.75.75 0 111.1 1.02l-3.25 3.5a.75.75 0 01-1.1 0l-3.25-3.5a.75.75 0 01.04-1.06z" clip-rule="evenodd" />
@@ -93,8 +95,6 @@
     </div>
   <% end %>
 </nav>
-<main class="<%= yield :main_css_class %>">
-  <%= yield %>
-</main>
+<%= yield %>
 </body>
 </html>
