--- a/app/views/layouts/rails_observatory/traces/request.html.erb
+++ b/app/views/layouts/rails_observatory/traces/request.html.erb
@@ -1,13 +1,12 @@
 <% content_for :title do %>
-  <span style="font-weight:200"><%= @request.http_method %></span> <%= @request.name.classify %>
+  <span style="font-weight:200"><%= @trace.http_method %></span> <%= @trace.name.classify %>
   <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" height="18">
     <path stroke-linecap="round" stroke-linejoin="round" d="M17.25 8.25 21 12m0 0-3.75 3.75M21 12H3" />
   </svg>
-  <span class="status-<%= 'success' if @request.status.to_s.start_with?('2') %>"><%= @request.status %> <%= Rack::Utils::HTTP_STATUS_CODES[@request.status] %></span>
+  <span class="status-<%= 'success' if @trace.status.to_s.start_with?('2') %>"><%= @trace.status %> <%= Rack::Utils::HTTP_STATUS_CODES[@trace.status] %></span>
   <br>
-  <span style="font-size: 1rem; font-weight: 200;"><%= time_ago_in_words(Time.at(@request.time)) %> ago
-    | <%= @request.duration.round(2) %>ms
-    | <%= @request.path %></span>
+  <span style="font-size: 1rem; font-weight: 200;"><%= time_ago_in_words(Time.at(@trace.time)) %> ago
+    | <%= @trace.duration.round(2) %>ms
+    | <%= @trace.path %></span>
 <% end %>
-<% content_for(:hide_duration, 'true') %>
-<% content_for(:main_css_class, 'layout-trace') %>
+<%= render template: 'layouts/rails_observatory/application' %>
