--- a/app/views/rails_observatory/traces/_recent_traces_page.html.erb
+++ b/app/views/rails_observatory/traces/_recent_traces_page.html.erb
@@ -2,6 +2,6 @@
   <%= render 'query_table', attributes: {id: 'recent-request-traces'}, events: @traces, fields: [
     :time, :http_method, :action, :route_pattern, :duration, :status,
   ], formatters: {
-    time: ->(time, trace) { link_to Time.at(time).to_fs('%H:%M:%S'), trace_path(trace.class.key_prefix, trace.id), data: { turbo_frame: '_top' } },
+    time: ->(time, trace) { link_to Time.at(time).to_fs('%H:%M:%S'), trace_by_type_path(trace.class.key_prefix, trace.id), data: { turbo_frame: '_top' } },
   } %>
 </turbo-frame>
